--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -141,9 +141,10 @@
 
 html,
 body {
-  position: fixed;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -240,4 +241,15 @@ p.shock-form-button-text {
 .screen-max {
   width: 100%;
   height: 100%;
+}
+
+@media (display-mode: standalone) {
+  html, 
+  body {
+    min-height: 100vh !important;
+    height: 100% !important;
+    bottom: 0;
+    top: 0;
+    background-color: var(--background);
+  }
 }
